<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrar">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textViewRNombre"
            android:inputType="textPersonName"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/editTextApellipat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textVireRApellipat"
            android:inputType="textPersonName"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/editTextApelliMat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textVireRApellipat"
            android:inputType="textPersonName"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/editTextNombredeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textViewRNombreUsuario"
            android:inputType="textPersonName"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textViewRPass"
            android:inputType="numberPassword"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/editTextVPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textViewRPass"
            android:inputType="numberPassword"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/editTextDirecc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textViewRDirección"
            android:inputType="textPersonName"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/editTextSedeRecolección"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textViewRSedeRecolección"
            android:inputType="textPersonName"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/editTextSedeAtencion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/textViewRSedeAtención"
            android:inputType="textPersonName"
            android:importantForAutofill="no"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>